--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -10,6 +10,12 @@ on:
     paths-ignore:
       - '.github/**'
 
+# Add permissions needed for creating releases and pushing changes
+permissions:
+  contents: write
+  packages: write
+  actions: write
+
 env:
   GITHUB_REPOSITORY: ${{ github.repository }}
   GITHUB_OWNER: ${{ github.repository_owner }}
@@ -24,6 +30,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check for code changes
         id: check
@@ -57,7 +64,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Fetch all history for version calculations
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Installation Scripts
         run: python3 .github/scripts/build_scripts.py
@@ -68,6 +76,9 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
