--- a/scripts/templates/install.sh.template
+++ b/scripts/templates/install.sh.template
@@ -6,20 +6,29 @@ GITHUB_OWNER="{{GITHUB_OWNER}}"
 GITHUB_REPO="{{GITHUB_REPO}}"
 GITHUB_REPOSITORY="{{GITHUB_REPOSITORY}}"
 
-# Detect OS
-OS="$(uname -s)"
-case "${OS}" in
-    Linux*)     MACHINE=linux;;
-    Darwin*)    MACHINE=macos;;
-    *)          echo "Unsupported operating system: ${OS}"; exit 1;;
-esac
+# Detect OS and architecture
+OS=$(uname -s | tr '[:upper:]' '[:lower:]')
+ARCH=$(uname -m)
 
-# Detect architecture
-ARCH="$(uname -m)"
-case "${ARCH}" in
-    x86_64*)    ARCH=x64;;
-    arm64*)     ARCH=arm64;;
-    *)          echo "Unsupported architecture: ${ARCH}"; exit 1;;
+case "$OS" in
+    "darwin")
+        case "$ARCH" in
+            "x86_64") BINARY="${GITHUB_REPO}-macos-x64" ;;
+            "arm64") BINARY="${GITHUB_REPO}-macos-arm64" ;;
+            *) echo "Unsupported architecture: $ARCH"; exit 1 ;;
+        esac
+        ;;
+    "linux")
+        case "$ARCH" in
+            "x86_64") BINARY="${GITHUB_REPO}-linux-x64" ;;
+            "arm64") BINARY="${GITHUB_REPO}-linux-arm64" ;;
+            *) echo "Unsupported architecture: $ARCH"; exit 1 ;;
+        esac
+        ;;
+    *)
+        echo "Unsupported operating system: $OS"
+        exit 1
+        ;;
 esac
 
 # Get the latest release info
@@ -41,7 +50,12 @@ if [ -z "$VERSION_TAG" ]; then
 fi
 
 # Get the download URL for the latest release
-DOWNLOAD_URL="https://github.com/${GITHUB_REPOSITORY}/releases/download/${VERSION_TAG}/${GITHUB_REPO}-${MACHINE}-${ARCH}"
+DOWNLOAD_URL=$(echo "$RELEASE" | grep "browser_download_url.*$BINARY" | cut -d '"' -f 4)
+
+if [ -z "$DOWNLOAD_URL" ]; then
+    echo "Error: Could not find download URL for $BINARY"
+    exit 1
+fi
 
 # Installation directory
 INSTALL_DIR="/usr/local/bin"
@@ -49,9 +63,9 @@ INSTALL_DIR="/usr/local/bin"
 
 echo "Downloading ${GITHUB_REPO} version ${VERSION_TAG}..."
 if command -v curl > /dev/null; then
-    sudo curl -L -o "${INSTALL_DIR}/${GITHUB_REPO}" "${DOWNLOAD_URL}"
+    sudo curl -L -o "${INSTALL_DIR}/${GITHUB_REPO}" "$DOWNLOAD_URL"
 elif command -v wget > /dev/null; then
-    sudo wget -O "${INSTALL_DIR}/${GITHUB_REPO}" "${DOWNLOAD_URL}"
+    sudo wget -O "${INSTALL_DIR}/${GITHUB_REPO}" "$DOWNLOAD_URL"
 fi
 
 # Make executable
