--- a/.github/workflows/stable-release.yml
+++ b/.github/workflows/stable-release.yml
@@ -76,20 +76,17 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            target: linux-x86_64
             exe_name: fuze-linux-x64
           - os: macos-latest
-            target: macos-aarch64
             exe_name: fuze-macos-arm64
           - os: windows-latest
-            target: windows-x86_64
             exe_name: fuze-windows-x64.exe
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          submodules: recursive
+          python-version: '3.x'
 
       - name: Set Up Git Config
         run: |
@@ -153,7 +150,7 @@ jobs:
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: fuze-${{ matrix.os }}
+          name: ${{ matrix.exe_name }}
           path: zig-out/bin/${{ matrix.exe_name }}
           if-no-files-found: error
 
