i don t like it

--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -126,26 +126,32 @@ jobs:
           restore-keys: |
             ${{ matrix.os }}-tree-sitter-typescript-
 
-      - name: Clone tree-sitter
-        if: steps.cache-tree-sitter-dependencies.outputs.cache-hit != 'true'
-        shell: ${{ matrix.os == 'windows-latest' ? 'pwsh' : 'bash' }}
+      - name: Clone tree-sitter (Windows)
+        if: matrix.os == 'windows-latest' && steps.cache-tree-sitter-dependencies.outputs.cache-hit != 'true'
+        shell: pwsh
         run: |
-          if ($IsWindows) {
-            Remove-Item -Path "deps/tree-sitter" -Recurse -Force -ErrorAction SilentlyContinue
-          } else {
-            rm -rf deps/tree-sitter
-          }
+          Remove-Item -Path "deps/tree-sitter" -Recurse -Force -ErrorAction SilentlyContinue
           git clone --depth 1 --branch v0.20.8 https://github.com/tree-sitter/tree-sitter.git deps/tree-sitter
 
-      - name: Clone tree-sitter-typescript
-        if: steps.cache-tree-sitter-typescript-dependencies.outputs.cache-hit != 'true'
-        shell: ${{ matrix.os == 'windows-latest' ? 'pwsh' : 'bash' }}
+      - name: Clone tree-sitter (Unix)
+        if: matrix.os != 'windows-latest' && steps.cache-tree-sitter-dependencies.outputs.cache-hit != 'true'
+        shell: bash
         run: |
-          if ($IsWindows) {
-            Remove-Item -Path "deps/tree-sitter-typescript" -Recurse -Force -ErrorAction SilentlyContinue
-          } else {
-            rm -rf deps/tree-sitter-typescript
-          }
+          rm -rf deps/tree-sitter
+          git clone --depth 1 --branch v0.20.8 https://github.com/tree-sitter/tree-sitter.git deps/tree-sitter
+
+      - name: Clone tree-sitter-typescript (Windows)
+        if: matrix.os == 'windows-latest' && steps.cache-tree-sitter-typescript-dependencies.outputs.cache-hit != 'true'
+        shell: pwsh
+        run: |
+          Remove-Item -Path "deps/tree-sitter-typescript" -Recurse -Force -ErrorAction SilentlyContinue
+          git clone --depth 1 --branch v0.20.1 https://github.com/tree-sitter/tree-sitter-typescript.git deps/tree-sitter-typescript
+
+      - name: Clone tree-sitter-typescript (Unix)
+        if: matrix.os != 'windows-latest' && steps.cache-tree-sitter-typescript-dependencies.outputs.cache-hit != 'true'
+        shell: bash
+        run: |
+          rm -rf deps/tree-sitter-typescript
           git clone --depth 1 --branch v0.20.1 https://github.com/tree-sitter/tree-sitter-typescript.git deps/tree-sitter-typescript
 
       - name: Run Tests
@@ -155,10 +161,17 @@ jobs:
         run: |
           zig build -Dtarget=${{ matrix.target }} -Doptimize=ReleaseFast -Dname="${{ matrix.exe_name }}"
 
-      - name: List Build Output
+      - name: List Build Output (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: pwsh
         run: |
           ls -la zig-out/bin/
-        shell: ${{ matrix.os == 'windows-latest' ? 'pwsh' : 'bash' }}
+
+      - name: List Build Output (Unix)
+        if: matrix.os != 'windows-latest'
+        shell: bash
+        run: |
+          ls -la zig-out/bin/
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v3
