--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -160,19 +160,22 @@ jobs:
       - name: Build Release
         run: |
           zig build -Dtarget=${{ matrix.target }} -Doptimize=ReleaseFast -Dname="${{ matrix.exe_name }}"
-
+          
       - name: List Build Output (Windows)
         if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
-          $buildPath = "zig-out/bin"
-          Write-Host "Checking build directory contents:"
-          if (Test-Path $buildPath) {
-            Get-ChildItem -Path $buildPath -Force
-          } else {
-            Write-Host "Build directory does not exist!"
+          Write-Host "Build Path Contents:"
+          if (!(Test-Path "zig-out")) {
+            Write-Host "zig-out directory does not exist!"
+            exit 1
           }
-
+          if (!(Test-Path "zig-out/bin")) {
+            Write-Host "zig-out/bin directory does not exist!"
+            exit 1
+          }
+          Get-ChildItem -Path "zig-out" -Recurse -Force | Select-Object FullName, Length
+          
       - name: List Build Output (Unix)
         if: matrix.os != 'windows-latest'
         shell: bash
@@ -180,10 +183,12 @@ jobs:
           ls -la zig-out/bin/
 
       - name: Upload Build Artifact
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.exe_name }}
           path: zig-out/bin/${{ matrix.exe_name }}
+          if-no-files-found: error
 
   create_release:
     needs: build
